--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
 
           <div class="column vh" style="background-color: rgb(50, 52, 67)">
             <h3 class="title is-3"></h3>
-            <h3 class="title is-3">Авторизируйся</h3>
+            <h3 class="title is-3">Авторизируйся, ты бля</h3>
             <form class="box center-block">
               <div class="field">
                 <label class="label">Логин</label>
