--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container-max-width">
-      <div class="notification is-primary vh" styles="height: 100%;">
+      <div class="notification is-primary vh " styles="height: 100%;">
         <div class="columns">
           <div
             class="column is-one-quarter vh"
@@ -29,7 +29,7 @@
           <div class="column vh" style="background-color: rgb(50, 52, 67)">
             <h3 class="title is-3"></h3>
             <h3 class="title is-3">Авторизируйся</h3>
-            <form class="box center-block">
+            <form class="box center-block module-border-wrap">
               <div class="field">
                 <label class="label">Логин</label>
                 <div class="control">
