Форма регистрации и авторизации

--- a/static/css/bulma.css
+++ b/static/css/bulma.css
@@ -10148,7 +10148,8 @@ label.panel-block:hover {
 .hero.is-primary a.navbar-item:hover, .hero.is-primary a.navbar-item.is-active,
 .hero.is-primary .navbar-link:hover,
 .hero.is-primary .navbar-link.is-active {
-  background-color: #00b89c;
+  background-image: linear-gradient(to right, #DA22FF 0%, #9733EE  51%, #DA22FF  100%);
+  
   color: #fff;
 }
 
