--- a/templates/login.html
+++ b/templates/login.html
@@ -1,77 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>Страница авторизации</title>
-  <link rel="stylesheet" href="../static/frameworks/fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="../static/css/bulma.css">
-  <link rel="stylesheet" href="../static/css/login.css">
-</head>
+    <title>Страница авторизации</title>
+    <link
+      rel="stylesheet"
+      href="../static/frameworks/fontawesome/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../static/css/bulma.css" />
+    <link rel="stylesheet" href="../static/css/login.css" />
+  </head>
 
-<body>
-  <section class="hero is-primary is-fullheight">
-    <div class="hero-body">
-      <div class="container">
-        <div class="columns is-centered">
-          <div class="column is-5-tablet is-4-desktop is-3-widescreen">
+  <body>
+    <section class="hero is-primary is-fullheight">
+      <!--Header [START]-->
+      <nav
+        class="navbar"
+        id="bg"
+        role="navigation"
+        aria-label="main navigation"
+      >
+        <div class="navbar-brand">
+          <a class="navbar-item" href="">
+            <img src="../static/images/hermes-black.png" width="112" height="28" />
+          </a>
 
-            <!--Form [START]-->
-            <form action="" class="box">
-              <section class="hero">
-                <div class="hero-body">
-                  <p class="title">
-                    Authorize
-                  </p>
-              </section>
-              <!--Login field [START]-->
-              <div class="field">
-                <div class="control has-icons-left">
-                  <input type="login" placeholder="Press login" class="input" required>
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-user"></i>
-                  </span>
+          <a
+            role="button"
+            class="navbar-burger"
+            aria-label="menu"
+            aria-expanded="false"
+            data-target="navbarBasicExample"
+          >
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+          <div class="navbar-start">
+            <a class="navbar-item"> Home </a>
+
+            <a class="navbar-item"> About </a>
+          </div>
+
+          <div class="navbar-end">
+            <div class="navbar-item">
+              <div class="buttons">
+                <a class="button is-primary" id="btn-sign-up" href="login.html">
+                  Sign up
+                </a>
+                <a class="button is-light" id="btn-sign-up" href="auto.html">
+                  <strong>Log in</strong>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!--Header [END]-->
+      <div class="hero-body">
+        <div class="container">
+          <div class="columns is-centered">
+            <div class="column is-5-tablet is-4-desktop is-3-widescreen">
+              <!--Form [START]-->
+              <form action="" class="box">
+                <!--LOGO field [START]-->
+                <div class="field has-text-centered">
+                  <img src="../static/images/hermes.png" width="167" />
                 </div>
-              </div>
-              <!--Login field [END]-->
-
-              <!--Password field [START]-->
-              <div class="field">
-                <div class="control has-icons-left">
-                  <input type="password" placeholder="Qwerty100" class="input" required>
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-lock"></i>
-                  </span>
+                <!--LOGO field [START]-->
+                <!--Login field [START]-->
+                <div class="field">
+                  <div class="control has-icons-left">
+                    <input
+                      type="login"
+                      placeholder="Press login"
+                      class="input"
+                      required
+                    />
+                    <span class="icon is-small is-left">
+                      <i class="fa fa-user"></i>
+                    </span>
+                  </div>
                 </div>
-              </div>
-              <!--Password field [END]-->
+                <!--Login field [END]-->
 
-              <!--Checkbox [START]-->
-              <div class="field">
-                <label for="" class="checkbox">
-                  <input type="checkbox">
-                  Remember me
-                </label>
-              </div>
-              <!--Checkbox [END]-->
+                <!--Password field [START]-->
+                <div class="field">
+                  <div class="control has-icons-left">
+                    <input
+                      type="password"
+                      placeholder="Qwerty100"
+                      class="input"
+                      required
+                    />
+                    <span class="icon is-small is-left">
+                      <i class="fa fa-lock"></i>
+                    </span>
+                  </div>
+                </div>
+                <!--Password field [END]-->
 
-              <!--Button Login [START]-->
-              <div class="field">
-                <button class="button is-dark" id="btn-login">
-                  Login
-                </button>
-              </div>
-              <!--Button Login [END]-->
+                <!--Checkbox [START]-->
+                <div class="field">
+                  <label for="" class="checkbox">
+                    <input type="checkbox" />
+                    Remember me
+                  </label>
+                </div>
+                <!--Checkbox [END]-->
 
-            </form>
-            <!--Form [END]-->
+                <!--Button Login [START]-->
+                <div class="field">
+                  <button class="button is-dark" id="btn-login">Login</button>
+                </div>
+                <!--Button Login [END]-->
+              </form>
+              <!--Form [END]-->
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-</body>
-
+    </section>
+  </body>
 </html>
