Новый стиль для задач!

--- a/templates/home.html
+++ b/templates/home.html
@@ -92,8 +92,8 @@
                 <div class="column is-half">
                   <h5 class="title is-5">Мои документы</h5>
                   <!-- Block theme  [Start]-->
-                  <div class="box" id="gray-themes-for-box">
-                    <div class="columns">
+                  <div class="box" id="gray-themes-for-box" style="display: inline-block; width:100%;">
+                    <div class="columns" >
                       <div class="column">
                       
                         <span class="icon is-small">
@@ -117,7 +117,7 @@
                   <!-- Block theme  [End]-->
 
                    <!-- Block theme  [Start]-->
-                   <div class="box" id="gray-themes-for-box">
+                  <div class="box" id="gray-themes-for-box" >
                     <div class="columns">
                       <div class="column">
                       
@@ -148,37 +148,70 @@
                   <h5 class="title is-5">Мои задачи</h5>
                   <div class="columns">
                     <div class="column">
+
+                      <!-- Task block [Start]-->
                       <div class="box" id="gray-themes-for-box">
                         <div class="box" id="black-themes-for-box">
-                          
-                         
-                              <span class="icon">
-                                <i class="fas fa-arrow-right"></i>
-                              </span> 
-                              <p> asfasafs</p> 
-                           
-                              <progress class="progress is-link" value="30" max="100">30%</progress>
-                          
-                         
-                         
-                          
+                          <div style="display: inline-block;">
+                            <div class="columns">
+                              <div class="column is-one-fifth">
+                                <span class="icon" style="display: block;">
+                                  <i class="fas fa-arrow-right" id="light-text"></i>
+                                </span> 
+                              </div>
+                              <div class="column is-four-fifths" id="light-text">
+                                <p>Сделать верстку</p>
+                              </div>
+                              <div class="column">
+                                <progress class="progress is-warning" value="30" max="100" style="width: 70px;"></progress>
+                              </div>
+                            </div>
+                          </div>
                         </div>
+                      </div>
+                      <!-- Task block [End]-->
+                      <!-- Task block [Start]-->
+                      <div class="box" id="gray-themes-for-box">
                         <div class="box" id="black-themes-for-box">
-                          <span class="icon">
-                            <i class="fas fa-arrow-right"></i>
-                          </span>
-                          <p> asfasafs</p>
-                          <progress class="progress is-link" value="70" max="100">70%</progress>
+                          <div style="display: inline-block;">
+                            <div class="columns">
+                              <div class="column is-one-fifth">
+                                <span class="icon" style="display: block;">
+                                  <i class="fas fa-arrow-right" id="light-text"></i>
+                                </span> 
+                              </div>
+                              <div class="column is-four-fifths" id="light-text">
+                                <p>Сделать верстку</p>
+                              </div>
+                              <div class="column">
+                                <progress class="progress is-danger" value="50" max="100" style="width: 70px;"></progress>
+                              </div>
+                            </div>
+                          </div>
                         </div>
+                      </div>
+                      <!-- Task block [End]-->
+                      <!-- Task block [Start]-->
+                      <div class="box" id="gray-themes-for-box">
                         <div class="box" id="black-themes-for-box">
-                          <span class="icon">
-                            <i class="fas fa-arrow-right"></i>
-                          </span>
-                          <p> asfasafs</p>
-                          <progress class="progress is-link" value="50" max="100">50%</progress>
+                          <div style="display: inline-block;">
+                            <div class="columns">
+                              <div class="column is-one-fifth">
+                                <span class="icon" style="display: block;">
+                                  <i class="fas fa-arrow-right" id="light-text"></i>
+                                </span> 
+                              </div>
+                              <div class="column is-four-fifths" id="light-text">
+                                <p>Сделать верстку</p>
+                              </div>
+                              <div class="column">
+                                <progress class="progress is-success" value="50" max="100" style="width: 70px; "></progress>
+                              </div>
+                            </div>
+                          </div>
                         </div>
-
-                      </div>  
+                      </div>
+                      <!-- Task block [End]-->
                     </div>
                   </div>
                 </div>
