--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -87,28 +88,35 @@
             <!-- Block document [Start]-->
             <div class="box">
               <div class="columns">
-
                 <!-- Last Left  Block  [Start]-->
                 <div class="column is-half">
                   <h5 class="title is-5">Мои документы</h5>
                   <!-- Block theme  [Start]-->
-                  <div class="box" id="gray-themes-for-box" style="display: inline-block; width:100%;">
-                    <div class="columns" >
+                  <div
+                    class="box"
+                    id="gray-themes-for-box"
+                    style="display: inline-block; width: 100%"
+                  >
+                    <div class="columns">
                       <div class="column">
-                      
                         <span class="icon is-small">
-                          <i class="fas fa-book" id="light-text" aria-hidden="true"></i>
+                          <i
+                            class="fas fa-book"
+                            id="light-text"
+                            aria-hidden="true"
+                          ></i>
                         </span>
-                      
                       </div>
                       <div class="is-three-quarters" id="position-left">
-                          <strong id="light-text"> Как писать красивый код?</strong>
-                          <p class="subtitle light-small-text">10 просмотров</p>
+                        <strong id="light-text">
+                          Как писать красивый код?</strong
+                        >
+                        <p class="subtitle light-small-text">10 просмотров</p>
                       </div>
                       <div class="column">
                         <div class="buttons">
                           <a class="button" id="btn-look" href="login.html">
-                            <strong style="font-size: 12px;">Просмотр</strong>
+                            <strong style="font-size: 12px">Просмотр</strong>
                           </a>
                         </div>
                       </div>
@@ -116,24 +124,28 @@
                   </div>
                   <!-- Block theme  [End]-->
 
-                   <!-- Block theme  [Start]-->
-                  <div class="box" id="gray-themes-for-box" >
+                  <!-- Block theme  [Start]-->
+                  <div class="box" id="gray-themes-for-box">
                     <div class="columns">
                       <div class="column">
-                      
                         <span class="icon is-small">
-                          <i class="fas fa-book" id="light-text" aria-hidden="true"></i>
+                          <i
+                            class="fas fa-book"
+                            id="light-text"
+                            aria-hidden="true"
+                          ></i>
                         </span>
-                      
                       </div>
                       <div class="is-three-quarters" id="position-left">
-                          <strong id="light-text">Я хуй его знает, честно ...</strong>
-                          <p class="subtitle light-small-text">8 просмотров</p>
+                        <strong id="light-text"
+                          >Я хуй его знает, честно ...</strong
+                        >
+                        <p class="subtitle light-small-text">8 просмотров</p>
                       </div>
                       <div class="column">
                         <div class="buttons">
                           <a class="button" id="btn-look" href="login.html">
-                            <strong style="font-size: 12px;">Просмотр</strong>
+                            <strong style="font-size: 12px">Просмотр</strong>
                           </a>
                         </div>
                       </div>
@@ -148,22 +160,32 @@
                   <h5 class="title is-5">Мои задачи</h5>
                   <div class="columns">
                     <div class="column">
-
                       <!-- Task block [Start]-->
                       <div class="box" id="gray-themes-for-box">
                         <div class="box" id="black-themes-for-box">
-                          <div style="display: inline-block;">
+                          <div style="display: inline-block">
                             <div class="columns">
                               <div class="column is-one-fifth">
-                                <span class="icon" style="display: block;">
-                                  <i class="fas fa-arrow-right" id="light-text"></i>
-                                </span> 
+                                <span class="icon" style="display: block">
+                                  <i
+                                    class="fas fa-arrow-right"
+                                    id="light-text"
+                                  ></i>
+                                </span>
                               </div>
-                              <div class="column is-four-fifths" id="light-text">
+                              <div
+                                class="column is-four-fifths"
+                                id="light-text"
+                              >
                                 <p>Сделать верстку</p>
                               </div>
                               <div class="column">
-                                <progress class="progress is-warning" value="30" max="100" style="width: 70px;"></progress>
+                                <progress
+                                  class="progress is-warning"
+                                  value="30"
+                                  max="100"
+                                  style="width: 70px"
+                                ></progress>
                               </div>
                             </div>
                           </div>
@@ -173,39 +195,29 @@
                       <!-- Task block [Start]-->
                       <div class="box" id="gray-themes-for-box">
                         <div class="box" id="black-themes-for-box">
-                          <div style="display: inline-block;">
+                          <div style="display: inline-block">
                             <div class="columns">
                               <div class="column is-one-fifth">
-                                <span class="icon" style="display: block;">
-                                  <i class="fas fa-arrow-right" id="light-text"></i>
-                                </span> 
+                                <span class="icon" style="display: block">
+                                  <i
+                                    class="fas fa-arrow-right"
+                                    id="light-text"
+                                  ></i>
+                                </span>
                               </div>
-                              <div class="column is-four-fifths" id="light-text">
+                              <div
+                                class="column is-four-fifths"
+                                id="light-text"
+                              >
                                 <p>Сделать верстку</p>
                               </div>
                               <div class="column">
-                                <progress class="progress is-danger" value="50" max="100" style="width: 70px;"></progress>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- Task block [End]-->
-                      <!-- Task block [Start]-->
-                      <div class="box" id="gray-themes-for-box">
-                        <div class="box" id="black-themes-for-box">
-                          <div style="display: inline-block;">
-                            <div class="columns">
-                              <div class="column is-one-fifth">
-                                <span class="icon" style="display: block;">
-                                  <i class="fas fa-arrow-right" id="light-text"></i>
-                                </span> 
-                              </div>
-                              <div class="column is-four-fifths" id="light-text">
-                                <p>Сделать верстку</p>
-                              </div>
-                              <div class="column">
-                                <progress class="progress is-success" value="50" max="100" style="width: 70px; "></progress>
+                                <progress
+                                  class="progress is-danger"
+                                  value="50"
+                                  max="100"
+                                  style="width: 70px"
+                                ></progress>
                               </div>
                             </div>
                           </div>
@@ -219,7 +231,6 @@
               </div>
             </div>
             <!-- Block document [End]-->
-
           </div>
           <!-- Block Work table [End]-->
 
@@ -228,15 +239,112 @@
             class="column is-one-quarter"
             style="background-color: rgb(26, 26, 26)"
           >
-            <div class="column is-half"></div>
+            
+            <div style="margin-left: 50px">
+              <!-- Block with images for news [Start]-->
+              <div class="columns is-vcentered">
+                <div class="column is-one-fifth"></div>
+                <div class="column is-one-fifth">
+                  <figure class="image is-32x32">
+                    <a href="">
+                      <img src="../static/images/notification.png"
+                    /></a>
+                  </figure>
+                </div>
+                <div class="column is-one-fifth">
+                  <figure class="image is-32x32">
+                    <a href=""> <img src="../static/images/settings.png" /></a>
+                  </figure>
+                </div>
+                <div class="column">
+                  <h3 class="title is-3"></h3>
+                  <figure class="image is-96x96">
+                    <a href=""> <img src="../static/images/user.png" /></a>
+                  </figure>
+                </div>
+              </div>
+              <!-- Block with images for news [End]-->
+
+              <h4 class="title is-4">События</h4>
+              
+              <!-- Block with notification [Start]-->
+              <div class="columns">
+                <div class="column">
+                  <div class="box" id="gray-themes-for-box">
+                    <div class="columns is-vcentered">
+                      <div class="column is-one-fifth">
+                        <div class="media-left">
+                          <figure class="image is-32x32">
+                            <a href="">
+                              <img src="../static/images/notification.png"
+                            /></a>
+                          </figure>
+                        </div>
+                      </div>
+
+                      <div class="column">
+                        <div class="content">
+                          <p class="title is-6" style="color: aliceblue; margin-bottom: 0px;">
+                            Task 1
+                          </p>
+                          <p  id="light-small-text">
+                            <time style="color: aliceblue; font-size: 14px; margin-top: 0px;"   datetime="2016-1-1">
+                              11:09 PM - 1 Jan 2016
+                              </time>
+                          </p>
+                         
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
+                
+              </div>
+              <!-- Block with notification [End]-->
+              <!-- Block with notification [Start]-->
+              <div class="columns">
+                
+                <div class="column">
+                  <div class="box" id="gray-themes-for-box">
+                    <div class="columns is-vcentered">
+                      <div class="column is-one-fifth">
+                        <div class="media-left">
+                          <figure class="image is-32x32">
+                            <a href="">
+                              <img src="../static/images/notification.png"
+                            /></a>
+                          </figure>
+                        </div>
+                      </div>
+
+                      <div class="column">
+                        <div class="content">
+                          <p class="title is-6" style="color: aliceblue; margin-bottom: 0px;">
+                            Task 1
+                          </p>
+                          <p  id="light-small-text">
+                            <time style="color: aliceblue; font-size: 14px; margin-top: 0px;"   datetime="2016-1-1">
+                              11:09 PM - 1 Jan 2016
+                              </time>
+                          </p>
+                         
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
+                
+              </div>
+              <!-- Block with notification [End]-->
+            </div>
           </div>
           <!-- Block News [End] -->
         </div>
       </div>
     </div>
-          
-  
-    
+
     <script src="https://fastly.jsdelivr.net/npm/echarts@5.4.1/dist/echarts.min.js"></script>
     <script>
       var dom = document.getElementById("chart-container-2");
