--- a/templates/home.html
+++ b/templates/home.html
@@ -33,13 +33,9 @@
             <aside class="menu">
               <ul class="menu-list">
                 <li>
-                      <a id="without-decor" > <img style= "margin-right: 10px;" src="../static/images/menu.png">Моя доска</a>
-                </li>                 
-                    
-                
-                  
-                  
-                <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/search.png">Поиск</a></li>
+                      <a id="without-decor" href="home.html"> <img style= "margin-right: 10px;" src="../static/images/menu.png">Моя доска</a>
+                </li>
+                <li><a id="without-decor" href="search.html"><img style= "margin-right: 10px;" src="../static/images/search.png">Поиск</a></li>
                 <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/add.png">Добавить материал</a></li>
                 <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/tasks.png">Задачи</a></li>
                 <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/menu.png">Предметы</a></li>
