--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
 
             <div class="box">
               <h5 class="title is-5">Хочешь гуглить как боженька?</h5>
-              <div class="columns">
+              <div class="columns is-vcentered">
                 <div class="column is-three-quarters">
                   <p>
                     Открываем Google, пишем то, что нужно найти в специальную
@@ -166,8 +166,8 @@
                       <!-- Task block [Start]-->
                       <div class="box" id="gray-themes-for-box">
                         <div class="box" id="black-themes-for-box">
-                          <div style="display: inline-block">
-                            <div class="columns">
+                          <div>
+                            <div class="columns is-vcentered">
                               <div class="column is-one-fifth">
                                 <span class="icon" style="display: block">
                                   <i
@@ -177,7 +177,7 @@
                                 </span>
                               </div>
                               <div
-                                class="column is-four-fifths"
+                                class="column is-half"
                                 id="light-text"
                               >
                                 <p>Сделать верстку</p>
@@ -187,7 +187,7 @@
                                   class="progress is-warning"
                                   value="30"
                                   max="100"
-                                  style="width: 70px"
+                                  
                                 ></progress>
                               </div>
                             </div>
@@ -198,8 +198,8 @@
                       <!-- Task block [Start]-->
                       <div class="box" id="gray-themes-for-box">
                         <div class="box" id="black-themes-for-box">
-                          <div style="display: inline-block">
-                            <div class="columns">
+                          <div>
+                            <div class="columns is-vcentered">
                               <div class="column is-one-fifth">
                                 <span class="icon" style="display: block">
                                   <i
@@ -209,7 +209,7 @@
                                 </span>
                               </div>
                               <div
-                                class="column is-four-fifths"
+                                class="column is-half"
                                 id="light-text"
                               >
                                 <p>Сделать верстку</p>
@@ -219,7 +219,7 @@
                                   class="progress is-danger"
                                   value="50"
                                   max="100"
-                                  style="width: 70px"
+                                 
                                 ></progress>
                               </div>
                             </div>
