--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -14,12 +13,10 @@
       href="https://unpkg.com/charts.css/dist/charts.min.css"
     />
     <link rel="stylesheet" href="../static/css/bulma.css" />
-    <link rel="stylesheet" href="../static/css/login.css" />
-    <link rel="stylesheet" href="../static/css/diagram.css" />
     <link rel="stylesheet" href="../static/css/document.css" />
-    <link rel="stylesheet" href="../static/css/tasks.css" />
     <link rel="stylesheet" href="../static/css/main_css_for_home.css" />
     <link rel="stylesheet" href="../static/css/menu.css" />
+    <link rel="stylesheet" href="../static/css/search.css" />
   </head>
   <body>
     <div class="notification is-primary is-fullheight" id="black-theme">
@@ -94,182 +91,35 @@
           </h3>
 
           <div class="box">
-            <h5 class="title is-5">Хочешь гуглить как боженька?</h5>
-            <div class="columns">
+            <h5 class="title is-5">Попробуем поискать ...</h5>
+            <div class="columns is-vcentered">
               <div class="column is-three-quarters">
-                <p>
-                  Открываем Google, пишем то, что нужно найти в специальную
-                  строку и жмем Enter. «Все просто, чему вы меня учить
-                  собрались», — думаете вы. Ага, не тут-то было, друзья.
-                </p>
+                <div class="field is-grouped">
+                  <p class="control is-expanded">
+                    <input class="input" type="text" placeholder="Find a repository">
+                  </p>
+                </div>
               </div>
               <div class="column">
                 <div class="buttons">
-                  <a class="button" id="btn-learn" href="login.html">
-                    <strong>Пройти обучение</strong>
+                  <a class="button" id="btn-search" href="login.html">
+                    <strong>Поиск</strong>
                   </a>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Block with statisics [Start]-->
+          <!-- Block with result [Start]-->
           <div class="box">
-            <h5 class="title is-5">Статистика за семестр</h5>
+            <h5 class="title is-5">Результат поиска</h5>
             <div class="columns">
-              <!-- Block with Bar [Start]-->
-              <div class="column is-two-fifths">
-                <div id="chart-container-1"></div>
-              </div>
-              <!-- Block with Bar [End]-->
-
-              <!-- Block with Diagram [Start]-->
-              <div class="column">
-                <div id="chart-container-2"></div>
-              </div>
-              <!-- Block with Diagram [End] -->
+                
+              
             </div>
           </div>
-          <!-- Block with statisics [End]-->
-
-          <!-- Block document [Start]-->
-          <div class="box">
-            <div class="columns">
-              <!-- Last Left  Block  [Start]-->
-              <div class="column is-half">
-                <h5 class="title is-5">Мои документы</h5>
-                <!-- Block theme  [Start]-->
-                <div
-                  class="box"
-                  id="gray-themes-for-box"
-                  style="display: inline-block; width: 100%"
-                >
-                  <div class="columns">
-                    <div class="column">
-                      <span class="icon is-small">
-                        <i
-                          class="fas fa-book"
-                          id="light-text"
-                          aria-hidden="true"
-                        ></i>
-                      </span>
-                    </div>
-                    <div class="is-three-quarters" id="position-left">
-                      <strong id="light-text"> Как писать красивый код?</strong>
-                      <p class="subtitle light-small-text">10 просмотров</p>
-                    </div>
-                    <div class="column">
-                      <div class="buttons">
-                        <a class="button" id="btn-look" href="login.html">
-                          <strong style="font-size: 12px">Просмотр</strong>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Block theme  [End]-->
-
-                <!-- Block theme  [Start]-->
-                <div class="box" id="gray-themes-for-box">
-                  <div class="columns">
-                    <div class="column">
-                      <span class="icon is-small">
-                        <i
-                          class="fas fa-book"
-                          id="light-text"
-                          aria-hidden="true"
-                        ></i>
-                      </span>
-                    </div>
-                    <div class="is-three-quarters" id="position-left">
-                      <strong id="light-text"
-                        >Я хуй его знает, честно ...</strong
-                      >
-                      <p class="subtitle light-small-text">8 просмотров</p>
-                    </div>
-                    <div class="column">
-                      <div class="buttons">
-                        <a class="button" id="btn-look" href="login.html">
-                          <strong style="font-size: 12px">Просмотр</strong>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Block theme  [End]-->
-              </div>
-              <!-- Last Left Block  [End]-->
-
-              <!-- Last Right Block  [Start]-->
-              <div class="column is-half">
-                <h5 class="title is-5">Мои задачи</h5>
-                <div class="columns">
-                  <div class="column">
-                    <!-- Task block [Start]-->
-                    <div class="box" id="gray-themes-for-box">
-                      <div class="box" id="black-themes-for-box">
-                        <div style="display: inline-block">
-                          <div class="columns">
-                            <div class="column is-one-fifth">
-                              <span class="icon" style="display: block">
-                                <i
-                                  class="fas fa-arrow-right"
-                                  id="light-text"
-                                ></i>
-                              </span>
-                            </div>
-                            <div class="column is-four-fifths" id="light-text">
-                              <p>Сделать верстку</p>
-                            </div>
-                            <div class="column">
-                              <progress
-                                class="progress is-warning"
-                                value="30"
-                                max="100"
-                                style="width: 70px"
-                              ></progress>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Task block [End]-->
-                    <!-- Task block [Start]-->
-                    <div class="box" id="gray-themes-for-box">
-                      <div class="box" id="black-themes-for-box">
-                        <div style="display: inline-block">
-                          <div class="columns">
-                            <div class="column is-one-fifth">
-                              <span class="icon" style="display: block">
-                                <i
-                                  class="fas fa-arrow-right"
-                                  id="light-text"
-                                ></i>
-                              </span>
-                            </div>
-                            <div class="column is-four-fifths" id="light-text">
-                              <p>Сделать верстку</p>
-                            </div>
-                            <div class="column">
-                              <progress
-                                class="progress is-danger"
-                                value="50"
-                                max="100"
-                                style="width: 70px"
-                              ></progress>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Task block [End]-->
-                  </div>
-                </div>
-              </div>
-              <!-- Last Right Block  [End]-->
-            </div>
-          </div>
-          <!-- Block document [End]-->
+          <!-- Block with result [End]-->
+         
         </div>
         <!-- Block Work table [End]-->
 
